Fix Spacing issues

--- a/static/css/includes/code.scss
+++ b/static/css/includes/code.scss
@@ -4,7 +4,6 @@ pre {
     // Spacing
     padding: $space16;
     padding-left: 21px;
-    margin-bottom: $space32;
     display:block;
     // Default
     color: #788D9E; 
